# subtitle-maker

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  clean-model.sh  mic_asr_test.py  pyproject.toml  sample.srt  start-dub.sh  start.sh  start_index_tts_api.sh  start_omnivoice_api.sh  stop-dub.sh  stop.sh  stop_index_tts_api.sh  stop_omnivoice_api.sh  yue-test.srt
docs/: auto-dubbing-v2-omnivoice-status.md
docs/refactor/: 00-product-principles.md  01-current-architecture-review.md  02-mvp-scope.md  03-target-architecture.md  04-data-contracts.md  05-migration-roadmap.md  06-agent-entry-v1.md
src/subtitle_maker/: agent_api.py  cli.py  dubbing_cli_api.py  index_tts_service.py  simple_web.py  streaming_api.py  streaming_asr.py  transcriber.py  translator.py  web.py
src/subtitle_maker/app/: __init__.py  legacy_runtime.py  legacy_simple_app.py  main.py
src/subtitle_maker/backends/: __init__.py  base.py  index_tts.py  omni_voice.py
src/subtitle_maker/core/: __init__.py  ffmpeg.py  llm_client.py
src/subtitle_maker/domains/: __init__.py
src/subtitle_maker/jobs/: __init__.py  command_builder.py  store.py  (+2 more)
tasks/: lessons.md  todo.md
tests/: test_agent_api.py  test_command_builder.py  test_dub_long_video.py  test_dub_pipeline_asr_layout.py  test_dubbing_cli_api.py  test_dubbing_runtime.py  test_index_tts_fastapi_server.py  test_job_recovery.py  test_manifest_contracts.py  test_omnivoice_fastapi_server.py  test_simple_web_legacy.py  test_task_store.py  test_web_routes_legacy.py
tools/: dub_long_video.py  dub_pipeline.py  index_tts_fastapi_server.py  omnivoice_fastapi_server.py  pyannote_diarize_worker.py  repair_bad_segments.py
(+28 files in other folders)
