[project]
name = "subtitle-maker"
version = "0.1.0"
description = "Local subtitle generator using Qwen3-ASR"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers",
    "ffmpeg-python",
    "tiktoken",
    "soundfile",
    "accelerate",
    "qwen-asr",
    "numba>=0.60.0",
    "openai",
    "requests",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "jinja2",
    "aiofiles"
]

[project.scripts]
subtitle-maker = "subtitle_maker.cli:main"
subtitle-maker-web = "subtitle_maker.web:start"
subtitle-maker-simple-web = "subtitle_maker.simple_web:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
