[project]
name = "subtitle-maker"
version = "0.1.0"
description = "Local subtitle generator using Qwen3-ASR"
requires-python = ">=3.10"
dependencies = [
    "torch==2.3.1",
    "torchaudio==2.3.1",
    "transformers",
    "ffmpeg-python",
    "soundfile>=0.12.1",
    "accelerate",
    "qwen-asr",
    "numba>=0.60.0",
    "openai",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "jinja2",
    "aiofiles",
    "demucs>=4.0.1",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "onnxruntime>=1.23.2",
]

[project.scripts]
subtitle-maker = "subtitle_maker.cli:main"
subtitle-maker-web = "subtitle_maker.web:start"
subtitle-maker-simple-web = "subtitle_maker.simple_web:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
